src/components/About/About.module.css
.about {
  display: flex;
  justify-content: center;
  gap: 20rem;
  min-height: 102vh;
  overflow-x: hidden;
  position: relative;
}

.aboutSocials {
  position: relative;
  top: 4rem;
  height: min-content;
}

.aboutMe {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
  top: 20rem;
  gap: 1rem;
  height: max-content;
  animation: slideUp 1.5s ease-in-out forwards;
}

@keyframes slideUp {
  to {
    opacity: 1;
    top: 18rem;
  }
}

.header {
  font-size: 3.5rem;
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0) 35%,
    rgb(0, 204, 255) 50%,
    rgba(255, 255, 255, 0) 65%,
    rgba(255, 255, 255, 0) 100%
  );
  background-clip: text;
  background-size: 200% 200%;
  color: transparent;
  font-weight: 600;
  cursor: context-menu;
  animation: gradient-animation 3s linear infinite reverse;
  transition: color 0.3s ease-in-out;
}

@keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  100% {
    background-position: 200% 100%;
  }
}

.header:hover {
  color: white;
  text-shadow: 2px 2px 5px rgb(0, 156, 196);
  animation-play-state: paused;
}

.intro {
  font-size: 2rem;
  cursor: context-menu;
}

.expertise {
  position: relative;
  top: 0;
  color: rgb(0, 204, 255);
  opacity: 1;
}

.slideUp {
  animation: slideUpNow 0.5s ease forwards;
}

@keyframes slideUpNow {
  to {
    opacity: 0;
    top: -0.5rem;
  }
}

.cursor {
  position: relative;
}

.cursor.hideCursor > svg {
  animation: hide 0.5s 0.2s ease forwards;
}

@keyframes hide {
  to {
    opacity: 0;
    transform: scale(0);
  }
}

.cursor > svg {
  position: absolute;
  width: 2rem;
  height: 2rem;
  fill: rgb(0, 204, 255);
}

.info {
  align-self: flex-start;
  display: flex;
  align-items: center;
  min-width: 22rem;
  height: max-content;
  min-height: 6rem;
  background-color: rgba(255, 255, 255, 0.2);
  border-radius: 1rem;
  padding: 0.5rem 1rem;
}

.resume {
  display: flex;
  align-items: center;
  position: relative;
  gap: 0.5rem;
  color: white;
  border: 0.2rem solid rgb(0, 204, 255);
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  margin-top: 2rem;
  font-size: 1.2rem;
  font-weight: 600;
  background-color: rgb(0, 6, 26);
  cursor: pointer;
}

.resume::before {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  content: "Download";
  font-size: 1.2rem;
  font-weight: 600;
  color: rgba(0, 6, 26, 0);
  background-color: rgb(0, 204, 255);
  z-index: 2;
  transition: width 0.5s ease, color 0.5s ease;
}

.resume:hover::before {
  color: rgba(0, 6, 26, 1);
  width: 100%;
}

.resume svg {
  width: 1.2rem;
  height: 1.2rem;
  fill: white;
  animation: scale 0.5s ease-in-out alternate infinite;
}

.infoBox {
  display: flex;
  flex-direction: column;
  max-width: 30rem;
  gap: 0.5rem;
}

.progress {
  position: relative;
  background-color: rgba(255, 255, 255, 0.2);
  width: 100%;
  height: 0.4rem;
  border-radius: 1rem;
}

.progress.fill::before {
  position: absolute;
  top: 0;
  content: "";
  width: 0;
  height: 100%;
  border-radius: 1rem;
  background-color: rgb(0, 204, 255);
  animation: load 5s 4s backwards;
}

.hello::after {
  position: absolute;
  content: "Welcome!";
  top: 0;
  right: -2rem;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2rem 0.5rem;
  border: 0.1rem solid rgb(0, 204, 255);
  border-radius: 1rem;
  background-color: rgba(255, 255, 255, 0.2);
  opacity: 0;
  transform: scale(0);
  filter: blur(5px);
}

.hello:hover::after {
  animation: pop 0.4s forwards ease-in-out;
}

.socialIcons > div {
  position: absolute;
  z-index: 1;
  cursor: pointer;
}

.socialIcons svg {
  position: relative;
  width: 3rem;
  height: 3rem;
  fill: white;
  stroke: white;
  transition: fill 0.2s ease-in-out, filter 0.3s ease-in-out;
}

.socialIcons:hover > div {
  animation-play-state: paused;
}

.bgLottie {
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 40rem;
  min-height: 40rem;
}

.blurIcon {
  filter: blur(0.3rem);
}

.linkedInBox::before,
.xBox::before,
.igBox::before,
.fbBox::before,
.youtubeBox::before,
.githubBox::before,
.mediumBox::before {
  position: absolute;
  font-size: 1.1rem;
  font-weight: 600;
  width: max-content;
  color: rgba(255, 255, 255, 0.6);
  bottom: -2rem;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  pointer-events: none;
}

.linkedInBox {
  top: 54%;
  left: 25%;
  animation: floatLinkedIn 8s 2s infinite ease-in-out;
}

.linkedInBox::before {
  content: "LinkedIn ➚";
}

.linkedInBox:hover::before {
  opacity: 1;
}

@keyframes floatLinkedIn {
  15% {
    transform: translate(0, -3rem) scale(0.8);
  }
  30% {
    transform: translate(0, 0);
  }
  45% {
    transform: translate(-0.5rem, -0.5rem);
  }
  60% {
    transform: translate(-1rem, 0rem);
  }
  75% {
    transform: translate(0.5rem, -0.5rem);
  }
  100% {
    transform: translate(0, 0);
  }
}

.linkedIn:hover {
  fill: rgb(10, 102, 194);
}

.xBox {
  top: 38%;
  left: 25%;
  animation: floatX 8s 3s infinite ease-in-out;
}

.xBox::before {
  content: "X ➚";
}

.xBox:hover::before {
  opacity: 1;
}

@keyframes floatX {
  15% {
    transform: translate(5.2rem, -2.2rem) scale(0.8);
  }
  30% {
    transform: translate(0, 0);
  }
  45% {
    transform: translate(-0.5rem, -0.5rem);
  }
  60% {
    transform: translate(-1rem, 0rem);
  }
  75% {
    transform: translate(0.5rem, -0.5rem);
  }
  100% {
    transform: translate(0, 0);
  }
}

.x:hover {
  fill: rgb(0, 0, 0);
  stroke-width: 1rem;
}

.igBox {
  top: 26%;
  left: 46%;
  animation: floatIg 8s 4s infinite ease-in-out;
}

.igBox::before {
  content: "Instagram ➚";
}

.igBox:hover::before {
  opacity: 1;
}

@keyframes floatIg {
  15% {
    transform: translate(5.5rem, 2rem) scale(0.8);
  }
  30% {
    transform: translate(0, 0);
  }
  45% {
    transform: translate(-0.5rem, -0.5rem);
  }
  60% {
    transform: translate(-1rem, 0rem);
  }
  75% {
    transform: translate(0.5rem, -0.5rem);
  }
  100% {
    transform: translate(0, 0);
  }
}

.ig:hover {
  fill: rgb(193, 53, 132);
}

.fbBox {
  top: 38%;
  right: 25%;
  animation: floatFb 8s 5s infinite ease-in-out;
}

.fbBox::before {
  /* content: "Facebook ➚"; */
  content: "Inactive";
}

.fbBox:hover::before {
  opacity: 1;
}

@keyframes floatFb {
  15% {
    transform: translate(0, 3rem) scale(0.8);
  }
  30% {
    transform: translate(0, 0);
  }
  45% {
    transform: translate(-0.5rem, -0.5rem);
  }
  60% {
    transform: translate(-1rem, 0rem);
  }
  75% {
    transform: translate(0.5rem, -0.5rem);
  }
  100% {
    transform: translate(0, 0);
  }
}

.fb:hover {
  fill: rgb(24, 119, 242);
}

.youtubeBox {
  top: 54%;
  right: 25%;
  animation: floatTube 8s 6s infinite ease-in-out;
}

.youtubeBox::before {
  /* content: "YouTube ➚"; */
  content: "Inactive";
}

.youtubeBox:hover::before {
  opacity: 1;
}

@keyframes floatTube {
  15% {
    transform: translate(-5.5rem, 2.2rem) scale(0.8);
  }
  30% {
    transform: translate(0, 0);
  }
  45% {
    transform: translate(-0.5rem, -0.5rem);
  }
  60% {
    transform: translate(-1rem, 0rem);
  }
  75% {
    transform: translate(0.5rem, -0.5rem);
  }
  100% {
    transform: translate(0, 0);
  }
}

.youtube:hover {
  fill: rgb(252, 39, 39);
}

.githubBox {
  top: 66%;
  left: 46%;
  animation: floatHub 8s 7s infinite ease-in-out;
}

.githubBox::before {
  content: "GitHub ➚";
}

.githubBox:hover::before {
  opacity: 1;
}

@keyframes floatHub {
  15% {
    transform: translate(-5.2rem, -2rem) scale(0.8);
  }
  30% {
    transform: translate(0, 0);
  }
  45% {
    transform: translate(-0.5rem, -0.5rem);
  }
  60% {
    transform: translate(-1rem, 0rem);
  }
  75% {
    transform: translate(0.5rem, -0.5rem);
  }
  100% {
    transform: translate(0, 0);
  }
}

.github:hover {
  fill: rgb(0, 0, 0);
  stroke-width: 1rem;
}

.mediumBox {
  top: 46%;
  left: 46%;
}

.mediumBox::before {
  content: "Medium ➚";
}

.mediumBox:hover::before {
  opacity: 1;
}

svg.medium {
  width: 2.7rem;
}

.medium:hover {
  fill: rgb(0, 0, 0);
  stroke-width: 1rem;
}

.toConnect {
  display: flex;
  position: absolute;
  bottom: -10rem;
  left: 13rem;
  cursor: pointer;
}

.bubbleBox {
  position: relative;
}

.bubble {
  position: absolute;
  top: -0.2rem;
  right: 1rem;
  width: 0.7rem;
  height: 0.7rem;
  border-radius: 1rem;
  background-color: rgb(0, 204, 255);
  animation: letsBounce 1.5s ease-in-out infinite;
}

@keyframes letsBounce {
  0%,
  20%,
  100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-10px);
  }
  60% {
    transform: translateY(-5px);
  }
  80% {
    transform: translateY(-8px);
  }
}

@keyframes pop {
  0% {
    opacity: 1;
  }
  70% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(0.9);
    opacity: 1;
    filter: blur(0);
  }
}

@keyframes load {
  to {
    width: 100%;
  }
}

@keyframes scale {
  to {
    transform: scale(1.15);
  }
}

@media (max-width: 1550px) {
  .about {
    gap: 10rem;
  }
}

@media (max-width: 1400px) {
  .about {
    gap: 5rem;
  }
}

@media (max-width: 1300px) {
  .about {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
  }

  .aboutMe {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    position: relative;
    top: 10rem;
    gap: 1rem;
    padding: 0 0.8rem;
    height: max-content;
    animation: slideUp 1.5s ease-in-out forwards;
  }

  .aboutSocials {
    top: 0;
  }

  .header {
    font-size: 2.5rem;
  }

  .intro {
    font-size: 1.5rem;
  }

  @keyframes slideUp {
    to {
      opacity: 1;
      top: 6rem;
    }
  }

  .toConnect {
    display: none;
  }
}

